[package]
name = "rust-copy-bulk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra="1.2.0"
workerpool="1.2.0"
rayon = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"